# NewsAgent

./: .env.example  README.md  pyproject.toml
data/: preferences.json
src/data/: newsagent.db
src/news_agent/: database.py  models.py  news_agent.py  prompts.py  web_api.py
web/: app.js  article.html  article.js  index.html  styles.css
